updated new assignemtn

--- a/public/new-assignment.html
+++ b/public/new-assignment.html
@@ -353,35 +353,9 @@
                                     <form>
                                         <div class="form-group">
                                             <label for="exampleInputEmail1">Assignment Name:</label>
-                                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email address ..">
+                                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Assignment Name Here">
                                         </div>
-                                        <div class="form-group">
-                                            <label for="exampleInputPassword1">Your password:</label>
-                                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter your password ..">
-                                        </div>
-                                        <button type="submit" class="btn btn-primary">Submit</button>
                                     </form>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="card card-form">
-                            <div class="row no-gutters">
-                                <div class="col-lg-4 card-body">
-                                    <p><strong class="headings-color">Due Date</strong></p>
-                                    <p class="text-muted">
-                                        So, basically, this is where you put in the due date of the course and you also will tell the lovely kiddies what you need and when. Please give them at least one day 🙏. If not, that's fine too I guess.
-                                    </p>
-                                </div>
-                                <div class="col-lg-8 card-form__body card-body">
-                                    <div class="form-group">
-                                        <label for="flatpickrSample01">Date</label>
-                                        <input id="flatpickrSample01" type="text" class="form-control" placeholder="Flatpickr example" data-toggle="flatpickr" value="today">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="flatpickrSample02">Range</label>
-                                        <input id="flatpickrSample02" type="text" class="form-control" placeholder="Flatpickr range example" data-toggle="flatpickr" data-flatpickr-mode="range" value="2018-10-07 to 2018-10-15">
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -399,6 +373,28 @@
                                         <p><br></p>
                                     </div>
 
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card card-form">
+                            <div class="row no-gutters">
+                                <div class="col-lg-4 card-body">
+                                    <p><strong class="headings-color">Due Date</strong></p>
+                                    <p class="text-muted">
+                                        So, basically, this is where you put in the due date of the course and you also will tell the lovely kiddies what you need and when. Please give them at least one day 🙏. If not, that's fine too I guess.
+                                    </p>
+                                </div>
+                                
+                                <div class="col-lg-8 card-form__body card-body">
+                                    <div class="form-group">
+                                        <label for="flatpickrSample01">Date</label>
+                                        <input id="flatpickrSample01" type="text" class="form-control" placeholder="Flatpickr example" data-toggle="flatpickr" value="today">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="flatpickrSample02">Range</label>
+                                        <input id="flatpickrSample02" type="text" class="form-control" placeholder="Flatpickr range example" data-toggle="flatpickr" data-flatpickr-mode="range" value="2018-10-07 to 2018-10-15">
+                                    </div>
                                 </div>
                             </div>
                         </div>
