--- a/public/teacher-lessons.html
+++ b/public/teacher-lessons.html
@@ -320,16 +320,13 @@
                     <div class="hero-banner bg-primary d-flex flex-row align-items-center" style="height:250px;">
                         <div class="container-fluid page__container">
                             <div class="d-flex flex-column">
-                                <div class="mb-1">
-                                    <a href="#" class="badge badge-dark-gray text-white">Back to Courses</a>
-                                </div>
                                 <div class="d-flex align-items-center mb-3">
                                     <div class="mr-3">
                                         <img src="assets/images/logos/rails.white.svg" width="100" alt="rails logo">
                                     </div>
                                     <div>
-                                        <h1 class="text-white mb-0">Build a Rails 5 application from Scratch</h1>
-                                        <p class="lead text-white">This course will get you started with all the basics </p>
+                                        <h1 class="text-white mb-0">NAME</h1>
+                                        <p class="lead text-white">DESCRIPTION </p>
                                         <div class="my-2 text-white d-flex">
                                             <strong class="mr-4 "><i class="material-icons icon-16pt icon-light">weekend</i> Beginner</strong>
                                             <strong><i class="material-icons icon-16pt icon-light">watch_later</i> 2:42</strong>
@@ -338,7 +335,7 @@
                                 </div>
 
                                 <div class="mt-1">
-                                    <a href="#" class="btn btn-light btn-rounded mr-2">Start Course</a><a href="#" class="btn btn-outline-light text-white btn-hover-primary btn-rounded"><i class="material-icons">local_activity</i> Add to list</a>
+                                    <a href="#" class="btn btn-light btn-rounded mr-2">Edit Name</a><a href="#" class="btn btn-outline-light text-white btn-hover-primary btn-rounded"><i class="material-icons">mail_outline</i> Email Students</a>
                                 </div>
                             </div>
                         </div>
@@ -408,103 +405,103 @@
                                         <li class="list-group-item d-flex">
                                             <a href="assignment.html">1. Wireframe</a>
                                             <div class="ml-auto d-flex align-items-center">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">date_range</i> date here</span>
+                                                <button type="button" class="btn btn-outline-dark btn-rounded">Edit</button>
                                             </div>
                                         </li>
                                         <li class="list-group-item d-flex">
                                             <a href="assignment.html">2. Design with Sketch</a>
                                             <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">date_range</i> date here</span>
+                                                <button type="button" class="btn btn-outline-dark btn-rounded">Edit</button>
                                             </div>
                                         </li>
                                         <li class="list-group-item d-flex">
                                             <a href="#">3. Build static HTML/CSS with Bootstrap 4</a>
                                             <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 3:39</span>
+                                                <button type="button" class="btn btn-outline-dark btn-rounded">Edit</button>
                                             </div>
                                         </li>
                                         <li class="list-group-item d-flex">
                                             <a href="#">4. Rails New Application</a>
                                             <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 1:24</span>
+                                                <button type="button" class="btn btn-outline-dark btn-rounded">Edit</button>
                                             </div>
                                         </li>
                                         <li class="list-group-item d-flex">
                                             <a href="#">5. Github and push your first commit.</a>
                                             <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 1:37</span>
+                                                <button type="button" class="btn btn-outline-dark btn-rounded">Edit</button>
                                             </div>
                                         </li>
                                         <li class="list-group-item d-flex">
                                             <a href="#">6. Add Bootstrap 4 to Rails</a>
                                             <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 2:11</span>
+                                                <button type="button" class="btn btn-outline-dark btn-rounded">Edit</button>
                                             </div>
                                         </li>
                                         <li class="list-group-item d-flex">
                                             <a href="#">7. Include Designed SASS assets</a>
                                             <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 3:52</span>
+                                                <button type="button" class="btn btn-outline-dark btn-rounded">Edit</button>
                                             </div>
                                         </li>
                                         <li class="list-group-item d-flex">
                                             <a href="#">8. Basics of Routing</a>
                                             <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 1:46</span>
+                                                <button type="button" class="btn btn-outline-dark btn-rounded">Edit</button>
                                             </div>
                                         </li>
                                         <li class="list-group-item d-flex">
                                             <a href="#">9. Postgres Database</a>
                                             <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 1:42</span>
+                                                <button type="button" class="btn btn-outline-dark btn-rounded">Edit</button>
                                             </div>
                                         </li>
                                         <li class="list-group-item d-flex">
                                             <a href="#">10. Setup Authentification with Devise</a>
                                             <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 1:42</span>
+                                                <button type="button" class="btn btn-outline-dark btn-rounded">Edit</button>
                                             </div>
                                         </li>
                                         <li class="list-group-item d-flex">
-                                            <a href="#">11. Design &amp; Code the User Account</a>
+                                            <a>11. Design &amp; Code the User Account</a>
                                             <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 4:03</span>
+                                                <button type="button" class="btn btn-outline-dark btn-rounded">Edit</button>
                                             </div>
                                         </li>
                                         <li class="list-group-item d-flex">
-                                            <a href="#">12. Scaffold a Discussions Feature with Rails</a>
+                                            <a>12. Scaffold a Discussions Feature with Rails</a>
                                             <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 2:22</span>
+                                                <button type="button" class="btn btn-outline-dark btn-rounded">Edit</button>
                                             </div>
                                         </li>
                                         <li class="list-group-item d-flex">
-                                            <a href="#">13. Refactoring and Refining</a>
+                                            <a>13. Refactoring and Refining</a>
                                             <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 1:53</span>
+                                                <button type="button" class="btn btn-outline-dark btn-rounded">Edit</button>
                                             </div>
                                         </li>
                                         <li class="list-group-item d-flex">
-                                            <a href="#">14. Validations</a>
+                                            <a>14. Validations</a>
                                             <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 1:39</span>
+                                                <button type="button" class="btn btn-outline-dark btn-rounded">Edit</button>
                                             </div>
                                         </li>
                                         <li class="list-group-item d-flex">
-                                            <a href="#">15. Rails Testing</a>
+                                            <a>15. Rails Testing</a>
                                             <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 1:42</span>
+                                                <button type="button" class="btn btn-outline-dark btn-rounded">Edit</button>
                                             </div>
                                         </li>
                                         <li class="list-group-item d-flex">
-                                            <a href="#">16. Create Staging and Production Servers</a>
+                                            <a>16. Create Staging and Production Servers</a>
                                             <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 1:42</span>
+                                                <button type="button" class="btn btn-outline-dark btn-rounded">Edit</button>
                                             </div>
                                         </li>
                                         <li class="list-group-item d-flex">
-                                            <a href="#">17. Deploy your Rails App with Capistrano</a>
+                                            <a>17. Deploy your Rails App with Capistrano</a>
                                             <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 1:42</span>
+                                                <button type="button" class="btn btn-outline-dark btn-rounded">Edit</button>
                                             </div>
                                         </li>
                                         <a href="new-assignment.html"><button type="button" class="btn btn-block btn-success">Add Lesson</button></a>
