added foundation for markdown

--- a/public/student-lessons.html
+++ b/public/student-lessons.html
@@ -328,7 +328,7 @@
                                         <img src="assets/images/logos/rails.white.svg" width="100" alt="rails logo">
                                     </div>
                                     <div>
-                                        <h1 class="text-white mb-0">Build a Rails 5 application from Scratch</h1>
+                                        <h1 class="text-white mb-0" id="Title"></h1>
                                         <p class="lead text-white">This course will get you started with all the basics </p>
                                         <div class="my-2 text-white d-flex">
                                             <strong class="mr-4 "><i class="material-icons icon-16pt icon-light">weekend</i> Beginner</strong>
@@ -398,8 +398,7 @@
                             <div class="col-md-8">
 
                                 <div class="mb-3"><strong class="text-dark-gray">DESCRIPTION</strong></div>
-                                <p class="mb-3">
-                                    Here ya go students. This is where you will be having your assignments posted by the lovely teachers that we have. If you have any questions, please message the teacher. 
+                                <p class="mb-3" id="Description">
                                 </p>
 
 
@@ -897,6 +896,11 @@
     <!-- App Settings (safe to remove) -->
     <script src="assets/js/app-settings.js"></script>
 
+    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
+
+    <script src="js/ClassAssembler.js"></script>
 
 
 
