--- a/public/author-dashboard.html
+++ b/public/author-dashboard.html
@@ -347,6 +347,7 @@
 
 
                                     <ul class="list-group list-group-flush mb-0" style="z-index: initial;">
+                                        <a id="CreateClass" href="new-course.html" class="btn btn-light" style="padding: 20px;">Create Class</a>
 
                                         <div id="class"></div>
 
@@ -1213,7 +1214,7 @@
     <script src="assets/js/flatpickr.js"></script>
 
     
-    <script src="js/ClassroomAccess.js"></script>
+    <script src="js/TeacherClassroomAccess.js"></script>
 
 </body>
 
