--- a/public/new-course.html
+++ b/public/new-course.html
@@ -469,7 +469,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button type="button" class="btn btn-block btn-sm btn-info" style="height: 60px; font-size: larger; margin-bottom: 20px;">Create Assignment</button>
+                        <button type="button" class="btn btn-block btn-sm btn-info" style="height: 60px; font-size: larger; margin-bottom: 20px;">Create Course</button>
 
 
                         <!-- <div class="card card-form">
