fixed error with git

--- a/public/new-course.html
+++ b/public/new-course.html
@@ -407,9 +407,11 @@
                                 <div class="col-lg-8 card-form__body card-body">
                                     <label>Course Description</label>
                                     <div id="DescriptionOfCourse" class="h-150" data-toggle="quill" data-quill-placeholder="Quill WYSIWYG editor">
-                                        <h1>Moyai 🗿 moment</h1>
-                                        <p>This editor is quite <strong>poggers</strong> and you too will <em>learn to love it</em></p>
-                                        <p><br></p>
+                                        <div id="DescriptionOfCourse">
+                                            <h1>Moyai 🗿 moment</h1>
+                                            <p>This editor is quite <strong>poggers</strong> and you too will <em>learn to love it</em></p>
+                                            <p><br></p>
+                                        </div>
                                     </div>
 
                                 </div>
