--- a/public/student-lessons.html
+++ b/public/student-lessons.html
@@ -900,7 +900,7 @@
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
 
-    <script src="js/ClassAssembler.js"></script>
+    <script src="js/Classassembler.js"></script>
 
 
 
