Updated favicons and other stuff

--- a/public/author-quiz-manager.html
+++ b/public/author-quiz-manager.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Quiz Manager</title>
+    <link rel="shortcut icon" href="https://www.jotform.com/uploads/Viderman/form_files/logo.6086ef0f45ee48.54055037.png" />
+    <title>Manage Quizzes | MATHx Portal</title>
 
     <!-- Prevent the demo from appearing in search engines -->
     <meta name="robots" content="noindex">
