--- a/public/new-quiz.html
+++ b/public/new-quiz.html
@@ -358,9 +358,12 @@
                                 </div>
                             </div>
                         </div>
+
                         <button type="button" class="btn btn-light" style="margin-left: 350px; width: 30%; margin-bottom: 20px;">
                          New Question
                         </button>
+                        <a href="new-assignment.html"><button type="button" class="btn btn-block btn-success">Create Quiz</button></a>
+
 
                         <!-- <div class="card card-form">
     <div class="row no-gutters">
