added Assignment creation

--- a/public/author-dashboard.html
+++ b/public/author-dashboard.html
@@ -322,11 +322,11 @@
 
                     <div class="container-fluid page__container">
 
-                        <div class="alert alert-soft-warning d-flex align-items-center card-margin" role="alert">
+                        <!-- <div class="alert alert-soft-warning d-flex align-items-center card-margin" role="alert">
                             <i class="material-icons mr-3">error_outline</i>
                             <div class="text-body">You have <strong>5 days left</strong> to submit {assignment name here} </div>
                             <a href="" class="btn btn-warning ml-auto">Go to assignment</a>
-                        </div>
+                        </div> -->
 
                         <div class="row">
                             <div class="col-lg-7">
