--- a/public/student-lessons.html
+++ b/public/student-lessons.html
@@ -404,108 +404,8 @@
 
                                 <div class="">
                                     <ul class="list-group list-lessons">
-                                        <li class="list-group-item d-flex">
-                                            <a href="assignment.html">1. Wireframe</a>
-                                            <div class="ml-auto d-flex align-items-center">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">date_range</i> date here</span>
-                                            </div>
-                                        </li>
-                                        <li class="list-group-item d-flex">
-                                            <a href="assignment.html">2. Design with Sketch</a>
-                                            <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">date_range</i> date here</span>
-                                            </div>
-                                        </li>
-                                        <li class="list-group-item d-flex">
-                                            <a href="#">3. Build static HTML/CSS with Bootstrap 4</a>
-                                            <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 3:39</span>
-                                            </div>
-                                        </li>
-                                        <li class="list-group-item d-flex">
-                                            <a href="#">4. Rails New Application</a>
-                                            <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 1:24</span>
-                                            </div>
-                                        </li>
-                                        <li class="list-group-item d-flex">
-                                            <a href="#">5. Github and push your first commit.</a>
-                                            <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 1:37</span>
-                                            </div>
-                                        </li>
-                                        <li class="list-group-item d-flex">
-                                            <a href="#">6. Add Bootstrap 4 to Rails</a>
-                                            <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 2:11</span>
-                                            </div>
-                                        </li>
-                                        <li class="list-group-item d-flex">
-                                            <a href="#">7. Include Designed SASS assets</a>
-                                            <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 3:52</span>
-                                            </div>
-                                        </li>
-                                        <li class="list-group-item d-flex">
-                                            <a href="#">8. Basics of Routing</a>
-                                            <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 1:46</span>
-                                            </div>
-                                        </li>
-                                        <li class="list-group-item d-flex">
-                                            <a href="#">9. Postgres Database</a>
-                                            <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 1:42</span>
-                                            </div>
-                                        </li>
-                                        <li class="list-group-item d-flex">
-                                            <a href="#">10. Setup Authentification with Devise</a>
-                                            <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 1:42</span>
-                                            </div>
-                                        </li>
-                                        <li class="list-group-item d-flex">
-                                            <a href="#">11. Design &amp; Code the User Account</a>
-                                            <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 4:03</span>
-                                            </div>
-                                        </li>
-                                        <li class="list-group-item d-flex">
-                                            <a href="#">12. Scaffold a Discussions Feature with Rails</a>
-                                            <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 2:22</span>
-                                            </div>
-                                        </li>
-                                        <li class="list-group-item d-flex">
-                                            <a href="#">13. Refactoring and Refining</a>
-                                            <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 1:53</span>
-                                            </div>
-                                        </li>
-                                        <li class="list-group-item d-flex">
-                                            <a href="#">14. Validations</a>
-                                            <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 1:39</span>
-                                            </div>
-                                        </li>
-                                        <li class="list-group-item d-flex">
-                                            <a href="#">15. Rails Testing</a>
-                                            <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 1:42</span>
-                                            </div>
-                                        </li>
-                                        <li class="list-group-item d-flex">
-                                            <a href="#">16. Create Staging and Production Servers</a>
-                                            <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 1:42</span>
-                                            </div>
-                                        </li>
-                                        <li class="list-group-item d-flex">
-                                            <a href="#">17. Deploy your Rails App with Capistrano</a>
-                                            <div class="ml-auto">
-                                                <span class="text-muted"><i class="material-icons icon-16pt icon-light">watch_later</i> 1:42</span>
-                                            </div>
-                                        </li>
+                                        <li id="AssignDiv" class="list-group-item d-flex"></li>
+                                        <div id="ListofAssignments"></div>
                                     </ul>
                                 </div>
                             </div>
