--- a/public/author-courses.html
+++ b/public/author-courses.html
@@ -369,7 +369,7 @@
                                             <div class="flex" style="min-width: 200px;">
                                                 <div class="d-flex">
                                                     <div>
-                                                        <h4 class="card-title mb-1"><a href="teache">Learn Vue.js</a></h4>
+                                                        <h4 class="card-title mb-1"><a href="teacher-lessons.html">Learn Vue.js</a></h4>
                                                         <p class="text-muted">Let’s start with a quick tour of Vue’s data binding features.</p>
                                                     </div>
                                                     <div class="dropdown ml-auto">
@@ -377,10 +377,12 @@
                                                             <i class="material-icons">more_vert</i>
                                                         </a>
                                                         <div class="dropdown-menu dropdown-menu-right">
-                                                            <a class="dropdown-item" href="teacher-lessons.html">Edit Course</a>
+                                                            <a class="dropdown-item" href="#">Email Students</a>
                                                             <a class="dropdown-item" href="#">Statistics</a>
                                                             <div class="dropdown-divider"></div>
-                                                            <a class="dropdown-item text-danger" href="#">Archive</a>
+                                                            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger" style="margin-left: 10%; margin-bottom: 10%;">Archive Course</button>
+                                                            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger" style="margin-left: 10%;">DELETE COURSE</button>
+
                                                         </div>
                                                     </div>
                                                 </div>
