Assignments extended, class creation added on

--- a/public/assignment.html
+++ b/public/assignment.html
@@ -55,16 +55,6 @@
 
 <body class="layout-default">
 
-
-
-
-
-
-
-
-
-
-
     <div class="mdk-drawer-layout js-mdk-drawer-layout" data-push data-responsive-width="992px" data-fullbleed>
         <div class="mdk-drawer-layout__content">
 
@@ -336,8 +326,8 @@
 
                     <div class="page__heading border-bottom">
                         <div class="container-fluid page__container">
-                            <h1>(Assignment Name Here)</h1>
-                            <p class="lead text-light-gray mb-0">(Due Date Here)</p>
+                            <h1 id="NameOfAssignment">Name Of Assignment</h1>
+                            <p class="lead text-light-gray mb-0" id="DueDate">(Due Date Here)</p>
                         </div>
                     </div>
                     
@@ -816,6 +806,8 @@
     <!-- Select2 -->
     <script src="assets/vendor/select2/select2.min.js"></script>
     <script src="assets/js/select2.js"></script>
+
+    <script src="js/AssignmentAssembler.js"></script>
 
 </body>
 
