--- a/public/new-course.html
+++ b/public/new-course.html
@@ -381,6 +381,20 @@
                         <div class="card card-form">
                             <div class="row no-gutters">
                                 <div class="col-lg-4 card-body">
+                                    <p><strong class="headings-color">Your Name</strong></p>
+                                    <p class="text-muted">This will be the name of the teacher on the course page</p>
+                                </div>
+                                <div class="col-lg-8 card-form__body card-body">
+                                    <div class="form-group">
+                                        <label for="select01">Enter Your Name</label>
+                                        <input id="CreatorOfCourse" class="form-control" placeholder="Sam">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card card-form">
+                            <div class="row no-gutters">
+                                <div class="col-lg-4 card-body">
                                     <p><strong class="headings-color">Course Start Date</strong></p>
                                     <p class="text-muted">
                                         So, basically, this is where you put in the start date of the course and you also will tell the lovely kiddies what exactly is occuring and when. Generic stuff yk.
