--- a/public/student-lessons.html
+++ b/public/student-lessons.html
@@ -355,8 +355,8 @@
                                                     <img src="assets/images/avatar/demi.png" alt="avatar" class="avatar-img rounded-circle">
                                                 </span>
                                                 <span class="flex d-flex flex-column">
-                                                    <strong>Adrian Demian</strong>
-                                                    <small class="text-muted text-uppercase">AUTHOR</small>
+                                                    <strong id="TeacherName"></strong>
+                                                    <small class="text-muted text-uppercase">Teacher</small>
                                                 </span>
                                             </a>
                                         </li>
@@ -800,7 +800,7 @@
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
 
-    <script src="js/Classassembler.js"></script>
+    <script src="js/ClassAssembler.js"></script>
 
 
 
